Pauper format - mass cleaning